# langgraph-sql-agent

./: .gitignore  README.md  SYSTEM_DESIGN.md
backend/: README.md  pyproject.toml  run_api.sh
backend/app/: main.py
backend/app/agents/: executor.py  general.py  rewriter.py  router.py  sql_generator.py  synthesizer.py  table_selector.py  validator.py  visualization.py
backend/app/api/: routes.py
backend/app/graph/: graph.py
backend/app/observability/: logger.py
backend/app/services/: llm.py
backend/app/state/: state.py
backend/app/tools/: schema.py  sql.py  validator.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  ThinkingProcess.tsx  TraceMonitor.tsx  VisualizationRenderer.tsx
frontend/src/hooks/: useChat.ts
frontend/src/types/: index.ts
